static/css/base.css
/* Global Styles */

:root {
    --ff: 'Nunito', sans-serif;

    --fw-n: 400;
    --fw-m: 600;
    --fw-b: 800;

    --text-primary: #1083a3;
    --text-secondary: #363946;
    --text-shadow: 2px 8px 6px rgba(0, 0, 0, 0.2),
        0px -5px 35px rgba(255, 255, 255, 0.3);

    --primary-color: #00704a;
    --secondary-color: #56bad6;
    --tertiary-color: #1083a3;
    --accent-active: #a31040;
}

body {
    font-family: 'Open Sans', sans-serif;
    margin: 0;
}

footer p,
nav p {
    font-size: 1rem;
    margin-left: 10px;
}

h1,
h2,
h3,
h4,
h5 {
    font-family: 'Nunito', san-serif;
}

/* Colors */

.dark-blue {
    color: rgba(16, 131, 163, 1)
}

.light-blue {
    color: rgba(86, 186, 214, 1)
}

.green {
    color: rgba(0, 112, 74, 1)
}

.brown {
    color: rgba(125, 36, 31, 1)
}

.red {
    color: rgba(163, 16, 64, 1)
}

.white {
    color: rgba(255, 255, 255, 1);
}

.dark-blue-bg {
    background-color: rgba(16, 131, 163, 1)
}

.light-blue-bg {
    background-color: rgba(86, 186, 214, 1)
}

.green-bg {
    background-color: rgba(0, 112, 74, 1)
}

.green-bg-trans {
    background-color: rgba(0, 112, 74, 0.6)
}

.gray-bg-trans {
    background-color: rgba(97, 107, 104, 0.5)
}

.brown-bg {
    background-color: rgba(125, 36, 31, 1)
}

.red-bg {
    background-color: rgba(163, 16, 64, 1)
}

.text-shadow {
    text-shadow: var(--text-shadow);
}

/* Navbar */

.navbar {
    background-color: rgba(0, 0, 0, 0.8);
}

.navbar-brand {
    background: url("../img/logo.svg") no-repeat left;
    height: 3.5rem;
    width: 12.5rem;
}

.navlink {
    font-family: 'Nunito', san-serif;
    font-size: 1.25rem;
    font-weight: 300;
    color: var(--primary-color);
    margin-left: 0.75rem;
    margin-right: 0.75rem;
    text-decoration: none;
}

.navlink:hover {
    text-decoration: none;
    list-style-type: none;
    color: var(--accent-active);
}

.dropdown-menu {
    border-radius: none;
    background-color: rgba(0, 0, 0, 0.8);
}

.dropdown-item {
    color: var(--primary-color);
}

#menu-toggle-button {
    border: 2px solid var(--primary-color);
    border-radius: 5px;
}

/* Margin top for every page */
.page-margin {
    margin-top: 5rem;
}

/* Index Page CSS */

.index-hero-text-container {
    text-shadow: var(--text-shadow);
    background-color: rgba(16, 131, 163, 0.6);
    padding: 1rem;
    border-radius: 5px;
    margin: 0.5rem;
    color: white;
}

.here-to-help {
    width: 90%;
    padding: 5rem;
    background: url("/static/hands2.png");
}

.here-to-help-text {
    padding: 2rem;
    font-weight: bold;
    border-radius: 5px;

}

.testimonies-container {
    padding-top: 3rem;
}

.kate {
    border: 1px solid black;
}

.signup-divider {
    padding-top: 3rem;
    padding-bottom: 3rem;
}

.promise {
    padding-top: 3rem;
    padding-bottom: 3rem;
}

/* How To Use Page */

.how-to-jumbotron {
    margin-bottom: 3rem;
}

.how-to-holder {
    margin-bottom: 2rem;
}

.icon-holder {
    height: 14rem;
    text-align: center;
    margin: 0px;
    border-radius: 3px;
    font-size: 7.5rem;
}

.help-container {
    padding-bottom: 3rem;
}

.support-link-text-holder {
    justify-content: center;
}

/* About Us */
#about-hero {
    background-image: url("/media/about-hero.webp");
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center center;
    width: 100vw;
    height: 70vh;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: var(--tertiary-color);
}

#index-hero {
    background-image: url("/media/index-hero.webp");
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center center;
    width: 100vw;
    height: 70vh;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

#how-to-hero {
    background-image: url("/media/how-to-hero.webp");
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center center;
    width: 100vw;
    height: 70vh;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.about-container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    width: auto;
    max-width: 50rem;
    margin: 0 auto;
}

.home-container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    width: auto;
    max-width: 50rem;
    margin: 1rem auto;
}

.text-shadow-primary {
    color: var(--primary-color);
    text-shadow: var(--text-shadow);
}

.team-member {
    color: var(--text-secondary);
    text-shadow: var(--text-shadow);
}

.icon-holder {
    height: 14rem;
    text-align: center;
    margin: 0px;
    border-radius: 3px;
    font-size: 7.5rem;
}

.icon-holder:hover .icon {
    transform: scale(1.25);
    transition-duration: 0.5s;
}

.about-icons {
    color: var(--tertiary-color);
    text-decoration: none;
    list-style-type: none;
}

.about-icons:hover {
    color: var(--accent-active)
}

.blurb {
    color: var(--text-secondary);
}

.team-card {
    border: 2px solid var(--primary-color);
}

.team-card:hover {
    border: 2px solid var(--secondary-color);
    width: 18rem;
}

.team-member {
    color: var(--text-secondary);
    text-shadow: var(--text-shadow);
}

/* ------------------------------- bootstrap toasts */

.message-container {
    position: fixed;
    top: 15%;
    right: 10%;

    z-index: 9999999;
}

.custom-toast {
    overflow: visible;
    border-color: rgb(201, 201, 102);
}

.toast-capper {
    height: 2px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0;
    height: 0;
    border-left: 4px solid transparent;
    border-right: 4px solid transparent;
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

/* Support Images */

.media {
    display: inline-block;
    position: relative;
    vertical-align: top;
}

.media-image {
    display: block;
}

.media-body {
    background: rgba(48, 56, 67, 0.9);
    bottom: 0;
    color: white;
    font-size: 1em;
    left: 0;
    opacity: 0;
    overflow: hidden;
    padding: 1rem;
    position: absolute;
    text-align: center;
    top: 0;
    right: 0;
    -webkit-transition: 0.6s;
    transition: 0.6s;
}

.media-body:hover {
    opacity: 1;
}

.media-body h2 {
    margin-top: 0;
    color: #fff;
}

.help-banner {
    text-align: center;
    padding-top: 3rem;
}

@media (max-width: 990px) {
    .right-push {
        text-align: right;
    }
}

